# novel-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  product-brief.md  prompting-guide.md
examples/wuxia-demo/: README.md  novel.yaml
examples/wuxia-demo/bible/: characters.md  premise.md  style.md  timeline.md  world.md
examples/wuxia-demo/chapters/: ch001.continuity.md
examples/wuxia-demo/outlines/: arc.md  chapters.md
examples/wuxia-demo/outlines/scenes/: ch001.md
examples/wuxia-demo/scenes/ch001/: s001.md  s002.md
examples/wuxia-demo/summaries/: ch001.md
src/novel_agent/: __init__.py  agents.py  cli.py  config.py  llm.py  models.py  project.py  prompting.py  vector_store.py
src/novel_agent/prompts/: brainstorm.j2  chapter_write.j2  continuity.j2  outline.j2  plan_scenes.j2  review.j2  summarize.j2  write_scene.j2
tests/: test_agents.py  test_cli.py  test_llm.py  test_models.py  test_project.py  test_prompting.py  test_vector_store.py
web/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/agent/run/: route.ts
web/app/api/file/: route.ts
web/app/api/memory/index/: route.ts
web/app/api/project/: route.ts
web/components/: agent-runner.tsx  asset-editor.tsx  file-tree.tsx  memory-panel.tsx  project-loader.tsx  workspace-shell.tsx
web/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
web/lib/: novel-agent.ts
web/store/: novel-workspace.ts
web/tests/: novel-agent.test.ts  store.test.ts
